--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     }
   },
   "dependencies": {
-    "css-tree": "^1.0.0-alpha.29"
+    "css-tree": "^1.0.0-alpha.29",
+    "loader-utils": "^1.2.3",
+    "schema-utils": "^1.0.0"
   }
 }
